--- a/Project 1/iDoHomework.html
+++ b/Project 1/iDoHomework.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="phone.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Homework List</title>
 </head>
@@ -34,15 +34,6 @@
     </form>
 	</div><!-- main -->
 	<div id="list"></div>
-	<div><script type="text/javascript">
-var admob_vars = {
- pubid: 'a14e5c6789c6f9e', // publisher id
- bgcolor: '000000', // background color (hex)
- text: 'FFFFFF', // font-color (hex)
- test: true // test mode, set to false to receive live ads
-};
-</script>
-<script type="text/javascript" src="http://mmv.admob.com/static/iphone/iadmob.js"></script></div>
 	<p id="options">
 		<a id="clear" onmouseover="mouseHover();" onmouseout="mouseOut();" href="#">clear local storage</a></p>
 </div><!-- container -->
