--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -1,18 +1,34 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="phone.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Homework List</title>
 </head>
 <body id="home">
 <div id="container">
   <div id="header">
-    <h1>iHomework</h1>
+    <h1>iDoHomework</h1>
   </div><!-- header -->
-    <div id="main">
-    <p>Keep your homework list with you. Just</p>
+  
+  	<table>
+  	<td><div id="main">
+   	<img height="180" width ="250" src="images\512.png"/></td>
+   	<td width="150">This app provides a very simplistic way to create a homework list for the average student. There is also a nice little collection of information to assist you with common issues students come across</td>
+   	
+  	</table>
+    <div id="margin">
+    <h2>Search</h2>
+    <input type="search" id="search"/>
+    <h2>Browse</h2>
+    </div>
+    <div id="buttons">
     <a href="iDoHomework.html">Add An Assignment</a>
+    <a href="">Homework Tips</a>
+    <a href="">University News</a>
+    <a href="">Time Management</a>
+    <a href="">Tutoring</a>
+    </div><!-- buttons -->
 	</div><!-- main -->
 	<div id="list"></div>
 	<p id="options">
