--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -24,10 +24,10 @@
     </div>
     <div id="buttons">
     <a href="iDoHomework.html">Add An Assignment</a>
-    <a href="">Homework Tips</a>
-    <a href="">University News</a>
-    <a href="">Time Management</a>
-    <a href="">Tutoring</a>
+    <a href="homeworktips.html">Homework Tips</a>
+    <a href="universitynews.html">University News</a>
+    <a href="timemanagement.html">Time Management</a>
+    <a href="tutoring.html">Tutoring</a>
     </div><!-- buttons -->
 	</div><!-- main -->
 	<div id="list"></div>
