--- a/Project 1/tutoring.html
+++ b/Project 1/tutoring.html
@@ -3,15 +3,54 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Homework Tips</title>
+	<title>Tutoring</title>
 </head>
 <body id="home">
 <div id="container">
   <div id="header">
-    <h1>Homework Tips</h1>
+    <h1>Tutoring</h1>
   </div><!-- header -->
-  
-  
+  <h2>Tutors</h2>
+  	<p>
+  		100 Academic Achievement LLC
+16518 Oley Ridge Court, Tampa FL
+Schools and Educational Services, NEC
+</p>
+<p>
+1st Choice Tutoring, Inc
+1030 Carrin Drive, Tallahassee FL
+Schools and Educational Services, NEC
+</p>
+<p>
+1 Step Ahead
+257 Sunrise Boulevard, Debary FL
+Schools and Educational Services, NEC
+</p>
+<p>
+3D Learner
+7100 W Camino Real # 215, Boca Raton FL
+Schools and Educational Services, NEC
+</p>
+<p>
+800sld(Some Learn Differently) 
+12304 Forest Lane Drive, Tampa FL
+Schools and Educational Services, NEC
+</p>
+<p>
+A1 Tutors
+103 Nw Pleasant Grove Way, Fort Pierce FL
+Schools and Educational Services, NEC
+<p>
+AAA Plus Tutoring
+3733 Oaks Clubhouse Drive, Pompano Beach FL
+Schools and Educational Services, NEC
+</p>
+<p>
+Abc Appletree
+3720 NW 43rd Street # 105, Gainesville FL
+Schools and Educational Services, NEC
+
+  	</p>
   
 </div><!-- container -->
 <script src="add_item.js"></script>
