--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -13,7 +13,7 @@
   
   	<table>
   	<td><div id="main">
-   	<img height="180" width ="250" src="images\512.png"/></td>
+   	<img height="20% width =25% src="images\512.png"/></td>
    	<td width="150">This app provides a very simplistic way to create a homework list for the average student. There is also a nice little collection of information to assist you with common issues students come across</td>
    	
   	</table>
