added margins and setup images and button text to be dynamic to the screen size

--- a/Project 1/homeworktips.html
+++ b/Project 1/homeworktips.html
@@ -10,6 +10,7 @@
   <div id="header">
     <h1>Homework Tips</h1>
   </div><!-- header -->
+  <div id="info">
   <h2>Parts of a Research Paper</h2>
   <p>Are you facing your first big research paper? It's important to get started early to give yourself lots of time to do a good job. First you should consider the various parts of the paper.
 
@@ -19,7 +20,7 @@ Page numbering can be frustrating and difficult. The first step is to divide you
 Your research note cards should include all the information necessary to write your paper. You should take extreme care as you create these note cards.
 If you want to give your research paper a professional look, you may want to insert a table of contents. When you do it right, this is a simple process that takes a few moments, and it makes a world of difference in the look of your paper.
 The MLA style provides a standard for giving your list of sources at the end of your paper. This alphabetical list of sources is called either a bibliography or a works cited list.</p>
-  
+  </div><!-- info -->
 </div><!-- container -->
 <script src="add_item.js"></script>
 </body>
