--- a/Project 1/timemanagement.html
+++ b/Project 1/timemanagement.html
@@ -10,6 +10,7 @@
   <div id="header">
     <h1>Time Management</h1>
   </div><!-- header -->
+  <div id="info">
   <p>Mistake #1. Failing to Keep a To-Do List
 Do you ever have that nagging feeling that you've forgotten to do an important piece of work? If so, you probably don't use a To-Do List to keep on top of things. (Or, if you do, you might not be using it effectively!)
 The trick with using To-Do Lists effectively lies in prioritizing the tasks on your list. Many people use an A - F coding system (A for high priority items, F for very low priorities). Alternatively, you can simplify this by using A through D, or by using numbers.
@@ -36,7 +37,7 @@ Procrastination occurs when you put off tasks that you should be focusing on rig
 Start by taking our Procrastination Quiz to find out if procrastination is a problem in your life. If it is, then learn the strategies you need to beat procrastination.
 For instance, one useful strategy is to tell yourself that you're only going to start on a project for ten minutes. Often, procrastinators feel that they have to complete a task from start to finish, and this high expectation makes them feel overwhelmed and anxious. Instead, focus on devoting a small amount of time to starting. That's all!
 You might also find it helpful to use Action Plans. These help you break large projects down into manageable steps, so that it's easy to see everything that you need to get done, and so that you can complete small chunks at a time. Doing this can stop you from feeling overwhelmed at the start of a new project.</p>
-  
+  </div> <!-- info -->
   
 </div><!-- container -->
 <script src="add_item.js"></script>
