--- a/Project 1/tutoring.html
+++ b/Project 1/tutoring.html
@@ -10,6 +10,7 @@
   <div id="header">
     <h1>Tutoring</h1>
   </div><!-- header -->
+  <div id="info">
   <h2>Tutors</h2>
   	<p>
   		100 Academic Achievement LLC
@@ -51,7 +52,7 @@ Abc Appletree
 Schools and Educational Services, NEC
 
   	</p>
-  
+  </div> <!-- info -->
 </div><!-- container -->
 <script src="add_item.js"></script>
 </body>
