--- a/Project 1/universitynews.html
+++ b/Project 1/universitynews.html
@@ -10,6 +10,7 @@
   <div id="header">
     <h1>University News</h1>
   </div><!-- header -->
+  <div id="info">
   <h2>2011 Full Sail Hall of Fame Inductees Announced</h2>
 		<p>		Each year a Full Sail committee comprised of staff and current Hall of Fame members elect six new inductees into the Full Sail University Hall of Fame. Alumni are considered for induction based on a minimum 10 year career journey, outstanding professional achievements, and  continued engagement with the Full Sail community.
 
@@ -31,6 +32,7 @@ These six alumni will be honored in an induction ceremony to be held on Full Sai
 
 “Each year, our hearts are filled with joy as we join together to honor and celebrate those members of our alumni who have paved the way for excellence in their chosen industry,” says Full Sail President Garry Jones. “We are delighted to announce the Hall of Fame committee’s latest induction class and we look forward to the numerous events that we will share with our students and the community during the ceremony week in November.”
   </p>
+  </div> <!-- info -->
 </div><!-- container -->
 <script src="add_item.js"></script>
 </body>
