Updated html files and lists

--- a/Project 2 Right/1-Political Science.html
+++ b/Project 2 Right/1-Political Science.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
-<body>
+<body id="lists">
 <div>
 <p>Political Science</p>
 <p>Report</p>
