--- a/Project 2 Right/4-Arts.html
+++ b/Project 2 Right/4-Arts.html
@@ -3,55 +3,59 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
-<body>
+<body id="lists">
 <div>
-<p>Political Science</p>
+<p>Arts</p>
 <p>Report</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Arts.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Read Book</p>
+<div>
+<p>Arts</p>
+<p>Drawing</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Arts.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Prepare Project</p>
+<div>
+<p>Arts</p>
+<p>Sketch</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Arts.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Study</p>
+<div>
+<p>Arts</p>
+<p>Start Project</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Arts.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Turn In Project</p>
+<div>
+<p>Arts</p>
+<p>Sculpture</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Arts.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 </body>
