--- a/Project 2 Right/2-Legal Studies.html
+++ b/Project 2 Right/2-Legal Studies.html
@@ -3,55 +3,59 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
-<body>
+<body id="lists">
 <div>
-<p>Political Science</p>
+<p>Legal Studies</p>
 <p>Report</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Legal Studies.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Read Book</p>
-<p>183</p>
-<p></p>
-<p>2011-08-28</p>
-<p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
-<a href="#" onclick="editItem(1314645340581);">edit item</a>
-</div>
-
-<p>Political Science</p>
-<p>Prepare Project</p>
-<p>183</p>
-<p></p>
-<p>2011-08-28</p>
-<p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
-<a href="#" onclick="editItem(1314645340581);">edit item</a>
-</div>
-
-<p>Political Science</p>
+<div>
+<p>Legal Studies</p>
 <p>Study</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Legal Studies.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 
-<p>Political Science</p>
-<p>Turn In Project</p>
+<div>
+<p>Practice Test</p>
+<p>Report</p>
 <p>183</p>
 <p></p>
 <p>2011-08-28</p>
 <p>&nbsp;Quickly</p>
-<img src="images/Political Science.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<img src="images/Legal Studies.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<a href="#" onclick="editItem(1314645340581);">edit item</a>
+</div>
+
+<div>
+<p>Project</p>
+<p>Report</p>
+<p>183</p>
+<p></p>
+<p>2011-08-28</p>
+<p>&nbsp;Quickly</p>
+<img src="images/Legal Studies.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
+<a href="#" onclick="editItem(1314645340581);">edit item</a>
+</div>
+
+<div>
+<p>Reading</p>
+<p>Report</p>
+<p>183</p>
+<p></p>
+<p>2011-08-28</p>
+<p>&nbsp;Quickly</p>
+<img src="images/Legal Studies.png"><a href="#" onclick="deleteItem(1314645340581);">delete item</a>
 <a href="#" onclick="editItem(1314645340581);">edit item</a>
 </div>
 </body>
