Setup Wrong way

--- a/Project 2 Wrong/index.html
+++ b/Project 2 Wrong/index.html
@@ -24,10 +24,12 @@
     </div>
     <div id="buttons">
     <a href="iDoHomework.html">Add An Assignment</a>
-    <a href="homeworktips.html">Homework Tips</a>
-    <a href="universitynews.html">University News</a>
-    <a href="timemanagement.html">Time Management</a>
-    <a href="tutoring.html">Tutoring</a>
+    <a href="5-Social Studies.html">Political Science</a>
+    <a href="2-Legal Studies.html">Legal Studies</a>
+    <a href="3-Science">Science</a>
+    <a href="4-Arts.html">Arts</a>
+    <a href="5-Social Studies.html">Social Studies</a>
+
     </div><!-- buttons -->
 	</div><!-- main -->
 	<div id="list"></div>
