--- a/Project 2 Right/index.html
+++ b/Project 2 Right/index.html
@@ -6,6 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Homework List</title>
 	
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$("a[@href^='http']").attr(target','_blank');
+		});
+		
+		
+	</script>
+	
 </head>
 <body id="home">
 <div id="container">
