href is external

--- a/Project 2 Right/index.html
+++ b/Project 2 Right/index.html
@@ -25,7 +25,7 @@
     <input type="search" id="search"/>
     <h2>Browse</h2>
     </div>
-     <a href="iDoHomework.html">Add An Assignment</a>
+     <a href="iDoHomework.html" rel="external">Add An Assignment</a>
     <div id="buttons">
     
  <div data-role="page">   
