--- a/Project 2 Right/index.html
+++ b/Project 2 Right/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<!--><link rel="stylesheet" type="text/css" href="styles.css" />
-	<link rel="stylesheet" type="text/css" href="jquery2.css" />!-->
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<link rel="stylesheet" type="text/css" href="jquery2.css" />
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Homework List</title>
 	
