--- a/Project 3 Right/index.html
+++ b/Project 3 Right/index.html
@@ -24,6 +24,7 @@
     <div id="margin">
     <h2>Search</h2>
     <input type="search" id="search"/>
+    <input type="submit" id="submit"/>
     <h2>Browse</h2>
     </div>
    
